# ros4hri-engagement

./: .gitignore  README.md  TEST.md
engagement_action/: package.xml  setup.cfg  setup.py
engagement_action/engagement_action/: engagement_action_node.py  led_control_node.py  navigation_node.py  tts_node.py  voice_interaction_node.py  vosk_asr_node.py
engagement_action/launch/: engagement_action.launch.py  navigation_node.launch.py  robot_led_control.launch.py  tts_node.launch.py  voice_interaction.launch.py
tiago_behavior_tree_cpp/: CMakeLists.txt  package.xml
tiago_behavior_tree_cpp/include/tiago_behavior_tree_cpp/: tiago_bt_node.hpp
tiago_behavior_tree_cpp/launch/: tiago_behavior_tree.launch.py
tiago_behavior_tree_cpp/src/: main.cpp  tiago_bt_node.cpp
tiago_behavior_tree_cpp/trees/: tiago_main_tree.xml
