<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>engagement_action</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cabadm00@estudiantes.unileon.es">cristina</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>pal_led_msgs</depend>
  <depend>text_to_speech_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>audio_common_msgs</depend> 
  <depend>sensor_msgs</depend>   
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
