<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelevel="warning"?>
<package format="3">
  <name>tiago_behavior_tree_cpp</name>
  <version>0.0.1</version>
  <description>Behavior Tree implementation for Tiago robot interactions</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend> 
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>text_to_speech_msgs</depend>
  <depend>pal_device_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>